# chaos-engineering-agent

./: .env.example  .gitignore  Makefile  README.md  chaos_agent.db  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
config/: connectors.example.yaml  contexts.yaml  default.yaml  observability-catalog.yaml
config/policies/: resilience-policy.example.yaml
deploy/helm/chaos-agent/: README.md
deploy/kind/: README.md
deploy/terraform/: README.md
docs/architecture/: README.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  router.tsx  styles.css  vite-env.d.ts
frontend/src/api/: client.ts  queryKeys.ts
frontend/src/demo/: mockData.ts
frontend/src/hooks/: useAgentStatus.ts  useBootstrap.ts  useCiGate.ts  useContext.ts  useDashboard.ts  useExperimentWebSocket.ts  useExperiments.ts  useHealth.ts  useObservability.ts  usePlatform.ts  usePosture.ts  (+2 more)
schemas/: experiment_plan.json  finding.json  infra_snapshot.json  round_score.json
scripts/: ci_gate.py  dev-all.sh  dev-up.sh
src/chaos_agent/: __init__.py  config.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_orchestrator.py
tests/unit/: test_agents.py  test_api_completion.py  test_aws_collector.py  test_bootstrap_features.py  test_connector_console.py  test_context.py  test_context_agent.py  test_ebpf_wasm.py  test_health.py  test_observability.py  test_phase1.py  test_posture_scanner.py  test_prompt_connection.py  test_red_blue_security.py  test_remaining_features.py  test_security_frameworks.py  test_tier2_features.py
(+248 files in other folders)
