[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chaos-agent"
version = "0.1.0"
description = "Internal AI-driven resilience platform — infra-aware chaos, Red/Blue adversarial training, K8s + AWS remediation"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "httpx>=0.28.0",
    "kubernetes>=31.0.0",
    "boto3>=1.35.0",
    "networkx>=3.4.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "structlog>=24.4.0",
    "pyyaml>=6.0.2",
    "anthropic>=0.40.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "prometheus-client>=0.21.0",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
]

[project.scripts]
chaos = "chaos_agent.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/chaos_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["chaos_agent"]
